--- a/carrito.html
+++ b/carrito.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Petshop-inicio</title>
+    <title>Fotocopias Paris</title>
     <link rel="stylesheet" href="/css/pet-shop.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="shortcut icon" href="img/favicon.png">
@@ -21,8 +21,8 @@
      <nav>
        <div class="btngroup">
          <a href="/index.html" class="btn btn-dark active" aria-current="page">INICIO</a>
-           <a href="/farmacia.html" class="btn btn-dark">FARMACIA</a>
-           <a href="/juguetes.html" class="btn btn-dark">JUGUETES</a>
+           <a href="/Libro.html" class="btn btn-dark">FARMACIA</a>
+           <a href="/articulos.html" class="btn btn-dark">JUGUETES</a>
            <a href="/contactenos.html" class="btn btn-dark">CONTACTO</a>
          </div>
    </nav>
